# opencv_line_descriptor

./: CMakeLists.txt  README.md
include/opencv2/: lsd.hpp
include/opencv2/line_descriptor/: descriptor.hpp
samples/: compute_descriptors.cpp  knn_matching.cpp  lines_extraction.cpp  lsd_lines_extraction.cpp  matching.cpp  radius_matching.cpp
src/: lsd.cpp  precomp.hpp
